force-app/src/objects/EventApi__Site_Event_Category__c.object
<CustomObject>
    <description>Control which events are displayed in which Sites for the portal.</description>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Site Event Categories</relationshipLabel>
        <relationshipName>Site_Event_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Site__c</fullName>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Site Event Categories</relationshipLabel>
        <relationshipName>Site_Event_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Site Event Category</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Site Event Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Event Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>